Automatically preselects the cameras

--- a/src/main/resources/static/calendar.html
+++ b/src/main/resources/static/calendar.html
@@ -19,7 +19,7 @@
 							#[empty]<p><em>You have no cameras!</em></p>#[/empty]
 
 							#[each]
-							<div class="checkbox"><label><input type="checkbox" class="selected-cameras" value="#id" checked/> #camera-type-label, #room-number</label></div>
+							<div class="checkbox"><label><input type="checkbox" class="selected-cameras" value="#id" checked id="camera-#id"/> #camera-type-label, #room-number</label></div>
 							#[/each]
 
 							#[post]#[/post]
