--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -76,7 +76,7 @@
 					<td>#tracer-dose</td>
 					<td>#HTMLOKAY:camera-type-summary</td>
 					<td>
-						<button class="btn select-therapy confirm-button" data-id="#id" data-name="#name" data-advice="#advice"><i class="fa fa-fw fa-arrow-circle-right"></i> Select</button>
+						<button class="btn select-therapy confirm-button" data-id="#id" data-name="#name" data-advice="#advice" data-cameras="#camera-type-ids"><i class="fa fa-fw fa-arrow-circle-right"></i> Select</button>
 					</td>
 				</tr>
 				#[/each]
