Timeout no longer requires re-load

--- a/src/main/resources/static/_timeout-modal.html
+++ b/src/main/resources/static/_timeout-modal.html
@@ -6,7 +6,7 @@
 			</div>
 			<div class="modal-body">
 				<p>Due to inactivity, you will be logged out automatically in <strong>30 seconds</strong>.</p>
-				<p><a href="javascript:;" class="timeout-link">Click here</a> to reload the page and stay logged in.</p>
+				<p><a href="javascript:;" class="timeout-link">Click here</a> to stay logged in.</p>
 			</div>
 		</div>
 	</div>
