--- a/src/main/resources/static/action-log.html
+++ b/src/main/resources/static/action-log.html
@@ -15,6 +15,11 @@
                 <th class="text-center">Notes</th>
             </tr>
             </thead>
+			<tbody>
+				<tr>
+					<td colspan="5"><em>Loading...</em></td>
+				</tr>
+			</tbody>
         </table>
     </div>
 </div>
