--- a/src/main/resources/static/_header.html
+++ b/src/main/resources/static/_header.html
@@ -131,6 +131,12 @@
 						<a href="/tracer-orders"><i class="fa fa-fw fa-lg fa-truck"></i> Tracer Orders</a>
 						</li>
 						#[/ifperm]
+                        #[ifperm: VIEW_GENERIC_EVENTS]
+                        <li
+                        #[if: current-page = generic-events] class="active"#[/if]>
+                        <a href="/generic-events"><i class="fa fa-fw fa-lg fa-paperclip"></i> Generic Events</a>
+                        </li>
+                        #[/ifperm]
 					</ul>
 					</li>
 					<li>
