--- a/src/main/resources/static/generic-events.html
+++ b/src/main/resources/static/generic-events.html
@@ -8,7 +8,7 @@
 	<div class="col-lg-12 col-md-12">
 		#[ifperm: EDIT_GENERIC_EVENTS]
 		<div class="text-right">
-			<button class="btn btn-default create-button"><i class="fa fa-paperclip"></i>&nbsp;&nbsp;Add Generic Event
+			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Generic Event
 			</button>
 		</div>
 		#[/ifperm]
