added bootstrap class to cancel buttons on edit forms as they're barely visible

--- a/src/main/resources/static/new-booking-stage-1.html
+++ b/src/main/resources/static/new-booking-stage-1.html
@@ -113,7 +113,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">Cancel</button>
 				<button type="button" class="btn btn-primary btn-save">Ok</button>
 			</div>
 		</div>
