--- a/src/main/resources/static/_delete-modal.html
+++ b/src/main/resources/static/_delete-modal.html
@@ -14,7 +14,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel">Cancel</button>
+				<button type="button" class="btn btn-default btn-cancel">Cancel</button>
 				<button type="button" class="btn btn-primary btn-okay">Yes, Delete</button>
 			</div>
 		</div>
