--- a/src/main/resources/static/calendar.html
+++ b/src/main/resources/static/calendar.html
@@ -30,7 +30,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">Cancel</button>
 				<button type="button" class="btn btn-primary btn-update">Update</button>
 			</div>
 		</div>
