--- a/src/main/resources/static/camera-types.html
+++ b/src/main/resources/static/camera-types.html
@@ -71,7 +71,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel">Cancel</button>
+				<button type="button" class="btn btn-default btn-cancel">Cancel</button>
 				<button type="button" class="btn btn-primary btn-save">Ok</button>
 			</div>
 		</div>
