--- a/src/main/resources/static/staff-roles.html
+++ b/src/main/resources/static/staff-roles.html
@@ -106,7 +106,7 @@
 
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-cancel">Cancel</button>
+				<button type="button" class="btn btn-default btn-cancel">Cancel</button>
 				<button type="button" class="btn btn-primary btn-save">Ok</button>
 			</div>
 		</div>
