Changed text to "No Confirmed Bookings"

--- a/src/main/resources/static/day-summary.html
+++ b/src/main/resources/static/day-summary.html
@@ -22,7 +22,7 @@
 	#[post]#[/post]
 
 	#[empty]
-	<p>There are no bookings today.</p>
+	<p>There are no <strong>confirmed</strong> bookings for today.</p>
 	#[/empty]
 
 	#[/collection]
