--- a/src/main/resources/static/new-booking-stage-2.html
+++ b/src/main/resources/static/new-booking-stage-2.html
@@ -165,6 +165,16 @@
 	</div>
 
 	<div class="form-group">
+		<div class="col-md-4 col-lg-4 text-right">
+			<label for="notes" class="control-label">Notes:</label>
+		</div>
+		<div class="col-md-5 col-lg-5">
+			<textarea class="form-control" name="notes" id="notes"></textarea>
+			<p class="help-block"><em>Optional</em></p>
+		</div>
+	</div>
+
+	<div class="form-group">
 		<div class="col-md-offset-4 col-lg-offset-4 col-md-4 col-lg-4">
 			<button class="btn btn-primary confirm-booking-button">Confirm Booking</button>
 		</div>
