fix for event titles

--- a/src/main/resources/static/generic-events.html
+++ b/src/main/resources/static/generic-events.html
@@ -29,7 +29,7 @@
 
 				#[each]
 				<tr>
-					<td>#title</td>
+					<td>#event-title</td>
 					<td>#from</td>
 					<td>#to</td>
 					<td>#description</td>
