One-off tokens to allow file download

--- a/src/main/resources/static/patients.html
+++ b/src/main/resources/static/patients.html
@@ -12,7 +12,7 @@
 			</button>
 			#[/!ifperm]
 			#[ifperm: EXPORT_PATIENTS]
-			<button class="btn btn-default top-button link-button" data-target="/export/patients.csv"><i class="fa fa-download"></i>&nbsp;&nbsp;Export Patients
+			<button class="btn btn-default top-button link-button" data-target="/export/patients.goto-csv"><i class="fa fa-download"></i>&nbsp;&nbsp;Export Patients
 			</button>
 			#[/!ifperm]
 			#[ifperm: IMPORT_PATIENTS]
