--- a/src/main/resources/static/select-staff.html
+++ b/src/main/resources/static/select-staff.html
@@ -3,8 +3,7 @@
 ##_header.html
 
 <div class="row">
-	<div class="col-lg-12 col-md-12">
-		<!-- TODO: Put me in a nice information call out box -->
+	<div class="col-lg-12 col-md-12 alert alert-info">
 		<p>Select a staff member below to edit <strong>#subject</strong>.</p>
 	</div>
 </div>
