--- a/src/main/resources/static/booking-edit-modal.html
+++ b/src/main/resources/static/booking-edit-modal.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group" style="display:none;">
                         <div class="col-md-4 col-lg-4 text-right">
                             <label class="control-label">Tracer Order Due:</label>
                         </div>
