--- a/src/main/resources/static/booking-edit-modal.html
+++ b/src/main/resources/static/booking-edit-modal.html
@@ -15,10 +15,10 @@
                         <input type="hidden" name="bookingid" value="#booking-id"/>
                         <label class="col-sm-4 control-label">Patient: </label>
                         <h5 class="col-md-8 col-lg-8">#patient-name</h5>
-                        <input type="hidden" name="patient" value="#patient-name"/>
+                        <input type="hidden" name="patient" value="#patient-id"/>
                         <label class="col-sm-4 control-label">Therapy: </label>
                         <h5 class="col-md-8 col-lg-8">#therapy-name</h5>
-                        <input type="hidden" name="therapy" value="#therapy-name"/>
+                        <input type="hidden" name="therapy" value="#therapy-id"/>
                     </div>
                     <div class="form-group">
                         <div class="col-md-4 col-lg-4 text-right">
@@ -172,8 +172,7 @@
                         <label class="col-sm-4 text-right control-label">Notes: </label>
 
                         <div class="col-sm-8">
-                            <input class="col-sm-12" name="notes" value="#notes-unformatted"/>
-
+                            <input class="col-sm-12" id = "notes-all" name="notes" value=""/>
                             <p class="help-block text-center">Optional.</p>
                         </div>
                     </div>
