--- a/src/main/resources/static/booking-edit-modal.html
+++ b/src/main/resources/static/booking-edit-modal.html
@@ -171,7 +171,7 @@
                         <label class="col-sm-4 text-right control-label">Notes: </label>
 
                         <div class="col-sm-8">
-                            <input class="col-sm-12" id = "notes-all" name="notes" value=""/>
+                            <input class="col-sm-12" id = "notes-all" name="notes" value="#notes"/>
                             <p class="help-block text-center">Optional.</p>
                         </div>
                     </div>
