--- a/src/main/resources/static/booking-details.html
+++ b/src/main/resources/static/booking-details.html
@@ -33,7 +33,7 @@
 		<p><strong>Camera:</strong></p>
 	</div>
 	<div class="col-md-8 col-lg-8">
-		<p id = "camera-type">#camera-type-label, #camera-room-number</p>
+		<p id="camera-type">#camera-type-label, #camera-room-number</p>
 	</div>
 </div>
 
@@ -65,12 +65,12 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4 col-lg-4 text-right">
-        <p><strong>Assigned Staff:</strong></p>
-    </div>
-    <div class="col-md-8 col-lg-8">
-        <p>#HTMLOKAY:staff</p>
-    </div>
+	<div class="col-md-4 col-lg-4 text-right">
+		<p><strong>Assigned Staff:</strong></p>
+	</div>
+	<div class="col-md-8 col-lg-8">
+		<p>#HTMLOKAY:staff</p>
+	</div>
 </div>
 
 <div class="row">
@@ -88,12 +88,20 @@
 		<p><strong>Update Status:</strong></p>
 	</div>
 	<div class="col-md-8 col-lg-8">
-		<button class="btn confirm-button link-button" data-id="#id" data-target="/booking-details/#booking-id/confirmed?csrf-token=#csrf-token"><i class="fa fa-check-circle"></i> Confirmed</button>
-		<button class="btn edit-button link-button" data-id="#id" data-target="/booking-details/#booking-id/unconfirmed?csrf-token=#csrf-token"><i class="fa fa-minus-circle"></i> Unconfirmed</button>
-		<button class="btn delete-button link-button" data-id="#id" data-target="/booking-details/#booking-id/cancelled?csrf-token=#csrf-token"><i class="fa fa-times-circle"></i> Cancelled</button>
-		<button class="btn info-button link-button" data-id="#id" data-target="/booking-details/#booking-id/rebooked?csrf-token=#csrf-token"><i class="fa fa-refresh"></i> Re-booked</button>
-	    <button class="btn btn-primary" id="edit-button-modal"><i class="fa fa-pencil-square-o"></i> Edit</button>
-    </div>
+		<button class="btn confirm-button link-button" data-id="#id" data-target="/booking-details/#booking-id/confirmed?csrf-token=#csrf-token">
+			<i class="fa fa-check-circle"></i> Confirmed
+		</button>
+		<button class="btn edit-button link-button" data-id="#id" data-target="/booking-details/#booking-id/unconfirmed?csrf-token=#csrf-token">
+			<i class="fa fa-minus-circle"></i> Unconfirmed
+		</button>
+		<button class="btn delete-button link-button" data-id="#id" data-target="/booking-details/#booking-id/cancelled?csrf-token=#csrf-token">
+			<i class="fa fa-times-circle"></i> Cancelled
+		</button>
+		<button class="btn info-button link-button" data-id="#id" data-target="/booking-details/#booking-id/rebooked?csrf-token=#csrf-token">
+			<i class="fa fa-refresh"></i> Re-booked
+		</button>
+		<button class="btn btn-primary" id="edit-button-modal"><i class="fa fa-pencil-square-o"></i> Edit</button>
+	</div>
 </div>
 #[/ifperm]
 
@@ -123,9 +131,10 @@
 	</div>
 </div>
 
+##booking-edit-modal.html
+
 #[/if]
 <script src="/js/bookings-edit.js"></script>
 <script src="/js/plugins/date-time-selector/date-selector.js"></script>
 <script src="/js/plugins/date-time-selector/time-selector.js"></script>
-##booking-edit-modal.html
 ##_footer.html
