--- a/src/main/resources/static/staff.html
+++ b/src/main/resources/static/staff.html
@@ -6,12 +6,12 @@
 
 <div class="row">
 	<div class="col-lg-12 col-md-12">
-        #[ifperm: EDIT_STAFF]
+		#[ifperm: EDIT_STAFF]
 		<div class="text-right">
 			<button class="btn btn-default create-button"><i class="fa fa-plus-circle"></i>&nbsp;&nbsp;Add Staff Member
 			</button>
 		</div>
-        #[/ifperm]
+		#[/ifperm]
 		<table class="table table-bordered table-hover" id="staff-table">
 			<thead>
 				<tr>
@@ -33,13 +33,13 @@
 					<td>#name</td>
 					<td>#role-label</td>
 					<td>
-                        #[ifperm: EDIT_STAFF]
+						#[ifperm: EDIT_STAFF]
 						<button class="btn edit-button" data-id="#id"><i class="fa fa-edit"></i> Edit</button>
 						<button class="btn delete-button" data-id="#id"><i class="fa fa-times-circle"></i> Delete</button>
-                        #[/ifperm]
-                        #[!ifperm: EDIT_STAFF]
-                        -
-                        #[/!ifperm]
+						#[/ifperm]
+						#[!ifperm: EDIT_STAFF]
+						-
+						#[/!ifperm]
 					</td>
 				</tr>
 				#[/each]
@@ -109,7 +109,7 @@
 						<label for="password" class="col-sm-3 control-label">Password</label>
 						<div class="col-sm-9">
 							<input class="form-control" type="password" name="password" id="password" data-toggle="tooltip" data-trigger="manual" data-title="Caps Lock is on" onkeypress="checkCapsLockStatus()"/>
-							<p class="help-block">Password must contain at least 6 characters.</p>
+							<p class="help-block">Password must contain at least 6 characters.<span class="edit-mode"> Leave blank for unchanged.</span></p>
 						</div>
 					</div>
 					<div class="form-group #[!ifperm: EDIT_STAFF_PASSWORD]create-mode#[/!ifperm]">
