--- a/src/main/resources/static/calendar.html
+++ b/src/main/resources/static/calendar.html
@@ -36,3 +36,7 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+	var hideStaffAbsences = true;
+	hideStaffAbsences = #[IFPERM: VIEW_STAFF_ABSENCES]false#[/IFPERM];
+</script>
